--- a/OkkaKalipWeb.UI/Views/About/CreateService.cshtml
+++ b/OkkaKalipWeb.UI/Views/About/CreateService.cshtml
@@ -1,6 +1,6 @@
-﻿@model NewsModel
+﻿@model ServiceModel
 @{
-    ViewData["Title"] = Model.Title + "için güncelleme işlemi";
+    ViewData["Title"] = "Yeni Servis";
     Layout = "~/Views/Shared/_adminLayout.cshtml";
 }
 
@@ -9,7 +9,6 @@
     <script src="~/modules/jquery-validation-unobtrusive/dist/jquery.validate.unobtrusive.min.js"></script>
     <script src="~/modules/ckeditor4/ckeditor.js"></script>
     <script>
-        CKEDITOR.removeAllListeners();
         CKEDITOR.replace("editor");
     </script>
 }
@@ -19,8 +18,8 @@
         <div class="card card-primary card-outline">
             <div class="card-header">
                 <h3 class="card-title">
-                    <i class="fas fa-edit"></i>
-                    <b>"@Model.Title"</b> Adlı Haber İçin Güncelleme İşlemi
+                    <i class="fas fa-plus-square"></i>
+                    Yeni Servis Ekle
                 </h3>
             </div>
             <div class="card-body">
@@ -30,31 +29,26 @@
                     <div class="text-danger">@ViewBag.ErrorMessage</div>
                 }
 
-
                 <!-- form start -->
-                <form asp-controller="News" asp-action="EditNews" method="post" enctype="multipart/form-data">
+                <form asp-controller="About" asp-action="CreateService" method="post" enctype="multipart/form-data">
                     <div asp-validation-summary="All" class="text-danger"></div>
-                    <input type="hidden" asp-for="Id" value="@Model.Id" />
                     <div class="card-body">
                         <div class="form-group row">
                             <label asp-for="ImageUrl">Resim</label>
-                            <input type="hidden" name="ImageUrl" value="@Model.ImageUrl" />
-                            <img src="~/img/news/@Model.ImageUrl" width="100" />
-                            <input type="file" name="file" value="" />
+                            <div class="custom-file">
+                                <input type="file" name="file" class="custom-file-input" id="customFile">
+                                <label class="custom-file-label" for="customFile">Resim Seç</label>
+                            </div>
+                            <span asp-validation-for="ImageUrl" class="text-danger"></span>
                         </div>
                         <div class="form-group row">
-                            <label asp-for="Author">Haber Yazarı</label>
-                            <input asp-for="Author" value="@Model.Author" class="form-control" placeholder="Haber Yazarını Giriniz...">
-                            <span asp-validation-for="Author" class="text-danger"></span>
-                        </div>
-                        <div class="form-group row">
-                            <label asp-for="Title">Slider Başlığı</label>
+                            <label asp-for="Title">Haber Başlığı</label>
                             <input asp-for="Title" value="@Model.Title" class="form-control" placeholder="Haber Başlığını Giriniz...">
                             <span asp-validation-for="Title" class="text-danger"></span>
                         </div>
                         <div class="form-group row">
-                            <label asp-for="Description">Açıklama</label>
-                            <textarea asp-for="Description" value="@Model.Description" id="editor" class="form-control" rows="3" placeholder="Haber Açıklaması ..."></textarea>
+                            <label asp-for="Title">Açıklama</label>
+                            <textarea asp-for="Description" value="@Model.Description" id="editor" class="form-control col-md-12" style="margin-top:-90px;" rows="3"></textarea>
                         </div>
                     </div>
                     <div class="card-body">
@@ -62,7 +56,7 @@
                             <i class="fas fa-save"></i>
                             Kaydet
                         </button>
-                        <a class="btn btn-outline-info ml-6" asp-controller="News" asp-action="NewsList">
+                        <a class="btn btn-outline-info ml-6" asp-controller="About" asp-action="ServiceManageList">
                             <i class="fas fa-chevron-left"></i>
                             Listeye Dön
                         </a>
