--- a/OkkaKalipWeb.UI/Views/News/NewsList.cshtml
+++ b/OkkaKalipWeb.UI/Views/News/NewsList.cshtml
@@ -6,7 +6,7 @@
 
     <div class="card">
         <div class="card-header">
-            <h3 class="card-title">Title</h3>
+            <h3 class="card-title">Haberler</h3>
 
             <div class="card-tools">
                 <a class="btn btn-success" asp-controller="News" asp-action="CreateNews">
