--- a/OkkaKalipWeb.UI/Views/Shared/Components/AdminComponents/_sidebarMenu.cshtml
+++ b/OkkaKalipWeb.UI/Views/Shared/Components/AdminComponents/_sidebarMenu.cshtml
@@ -24,7 +24,7 @@
         <nav class="mt-2">
             <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
                 <!-- Add icons to the links using the .nav-icon class
-    with font-awesome or any other icon font library -->
+                with font-awesome or any other icon font library -->
                 @if (User.Identity.IsAuthenticated && User.IsInRole("admin"))
                 {
                     <li class="nav-item">
@@ -41,6 +41,7 @@
                             <p>Firma Bilgileri</p>
                         </a>
                     </li>
+                    <!--
                     <li class="nav-item">
                         <a asp-controller="About" asp-action="AboutManage"
                            asp-active-controllers="About" asp-active-actions="AboutManage" asp-active-class="active" class="nav-link">
@@ -48,6 +49,36 @@
                             <p>Kurumsal Bilgiler</p>
                         </a>
                     </li>
+                    -->
+
+                    <li class="nav-item"
+                        asp-active-controllers="About" asp-active-actions="AboutManage,ServiceManageList,CreateService,EditService" asp-active-class="has-treeview menu-open">
+                        <a asp-controller="About" asp-action="AboutManage" class="nav-link"
+                           asp-active-controllers="About" asp-active-actions="AboutManage,ServiceManageList,CreateService,EditService" asp-active-class="active">
+                            <i class="nav-icon fas fa-dumpster"></i>
+                            <p>
+                                Kurumsal Bilgiler
+                                <i class="fas fa-angle-left right"></i>
+                            </p>
+                        </a>
+                        <ul class="nav nav-treeview">
+                            <li class="nav-item">
+                                <a asp-controller="About" asp-action="AboutManage" class="nav-link"
+                                   asp-active-controllers="About" asp-active-actions="AboutManage" asp-active-class="active">
+                                    <i class="far fa-circle nav-icon"></i>
+                                    <p>Bilgileri Güncelle</p>
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a asp-controller="About" asp-action="ServiceManageList" class="nav-link"
+                                   asp-active-controllers="About" asp-active-actions="ServiceManageList,CreateService,EditService" asp-active-class="active">
+                                    <i class="far fa-circle nav-icon"></i>
+                                    <p>Servis Bilgileri</p>
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
+
                     <li class="nav-item">
                         <a asp-controller="Product" asp-action="ProductList"
                            asp-active-controllers="Product" asp-active-actions="ProductList,CreateProduct,EditProduct" asp-active-class="active"
