--- a/OkkaKalipWeb.UI/Views/Shared/Components/_singleProduct.cshtml
+++ b/OkkaKalipWeb.UI/Views/Shared/Components/_singleProduct.cshtml
@@ -4,6 +4,7 @@
         <div class="product-head">
             <img src="~/img/product/@Model.ImageUrl" alt="@Model.Name">
             <div class="product-btn">
+                <!--
                 @if (User.Identity.IsAuthenticated)
                 {
                     <form asp-controller="Cart" asp-action="AddToCart" method="post" class="form-inline">
@@ -12,7 +13,8 @@
                         <button class="btn btn-primary" type="submit">Sepete Ekle</button>
                     </form>
                 }
-                <a asp-controller="Shop" asp-action="Details" asp-route-id="@Model.Id" class="btn view-detail">Ürün Detayı</a>
+                -->
+                <a asp-controller="Shop" asp-action="Details" asp-route-id="@Model.Id" class="btn view-detail container-fluid">Ürün Detayı</a>
             </div>
         </div>
         <div class="product-content">
