--- a/OkkaKalipWeb.UI/Views/Shared/PartialViews/_footer.cshtml
+++ b/OkkaKalipWeb.UI/Views/Shared/PartialViews/_footer.cshtml
@@ -7,7 +7,7 @@
                 <div class="col-md-4 col-sm-6">
                     <div class="widget-footer">
                         <div id="media_image-1" class="widget widget_media_image">
-                            <a href="index.html"><img src="~/img/info/@Model.InfoModel.LogoFooter" alt=""></a>
+                            <a asp-controller="Home" asp-action="Index"><img src="~/img/info/@Model.InfoModel.LogoFooter" alt=""></a>
                         </div>
                         <div id="custom_html-1" class="widget_text widget widget_custom_html">
                             <div class="textwidget custom-html-widget">
