--- a/OkkaKalipWeb.UI/Views/Shared/PartialViews/_navbar.cshtml
+++ b/OkkaKalipWeb.UI/Views/Shared/PartialViews/_navbar.cshtml
@@ -55,7 +55,7 @@
                                     <a asp-controller="Account" asp-action="Manage">@User.Identity.Name</a>
 
                                     <ul class="sub-menu">
-                                        <li class="menu-item"><a asp-controller="Cart" asp-action="Index">Sepet</a></li>
+                                        <!-- <li class="menu-item"><a asp-controller="Cart" asp-action="Index">Sepet</a></li>-->
                                         <li class="menu-item"><a asp-controller="Account" asp-action="Logout">Çıkış Yap</a></li>
                                     </ul>
                                 }
