--- a/OkkaKalipWeb.UI/Views/Shared/Components/AdminComponents/_sidebarMenu.cshtml
+++ b/OkkaKalipWeb.UI/Views/Shared/Components/AdminComponents/_sidebarMenu.cshtml
@@ -102,8 +102,15 @@
                     <li class="nav-item">
                         <a asp-controller="ClientsLogo" asp-action="ClientsLogoList"
                            asp-active-controllers="ClientsLogo" asp-active-actions="ClientsLogoList" asp-active-class="active" class="nav-link">
-                            <i class="nav-icon fas fa-newspaper"></i>
+                            <i class="nav-icon fas fa-image"></i>
                             <p>Partner Logoları</p>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a asp-controller="Banner" asp-action="BannerList"
+                           asp-active-controllers="Banner" asp-active-actions="BannerList" asp-active-class="active" class="nav-link">
+                            <i class="nav-icon fas fa-desktop"></i>
+                            <p>Banner Resimleri</p>
                         </a>
                     </li>
                 }
